<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">
<LinearLayout
    android:id="@+id/linerLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
      android:textColor="@android:color/darker_gray"
        android:textSize="15sp"/>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/worldcup"
        android:contentDescription="TODO" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text3"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/darkgray"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text4"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkgray"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/text5"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linerLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="20sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text6"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15sp" 
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text7"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text8"
            android:layout_weight=".3"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textAlignment="textEnd"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text9"
            android:layout_weight=".3"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textAlignment="textEnd"/>
    </LinearLayout>
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

</LinearLayout>


</RelativeLayout>